<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Signals" Id="{dd828172-10b3-494e-afda-ba8efbe9b66c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Signals
VAR
	fbTimer1: TON;
	TON_0: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <NWL>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="NWLImplementationObject">
              <v n="NetworkListComment">""</v>
              <v n="DefaultViewMode">"Ld"</v>
              <l2 n="NetworkList" cet="Network">
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"GVL_VAR.bSingal"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">true</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">21L</v>
                          </o>
                          <o>
                            <v n="Operand">"DoorIsOpen"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">4</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">55L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeBox">
                        <v n="BoxType">"TON"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"fbTimer1"</v>
                          <v n="Type">"TON"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">13L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems">
                            <n />
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"GVL_VAR.bCompressor"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">true</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">17L</v>
                            </o>
                            <v n="Id">16L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"GVL_VAR.tlmAlarmThreshold"</v>
                              <v n="Type">"TIME"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">19L</v>
                            </o>
                            <v n="Id">18L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>IN</v>
                            <v>PT</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>TIME</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>Q</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <v n="EN">false</v>
                        <v n="ENO">false</v>
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">14L</v>
                      </o>
                      <v n="Id">22L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">5L</v>
                </o>
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"GVL_VAR.bSingal"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">true</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">44L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeBox">
                        <v n="BoxType">"AND"</v>
                        <o n="Instance" t="Operand">
                          <n n="Operand" />
                          <v n="Type">""</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">38L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" />
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems">
                          <o t="BoxTreeBox">
                            <v n="BoxType">"FB_Blinker"</v>
                            <o n="Instance" t="Operand">
                              <n n="Operand" />
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">true</v>
                              <v n="Id">32L</v>
                            </o>
                            <o n="OutputItems" t="OutputItemList">
                              <l2 n="OutputItems">
                                <n />
                              </l2>
                            </o>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <n n="InputFlags" />
                            <l2 n="InputItems">
                              <o t="BoxTreeBox">
                                <v n="BoxType">"TON"</v>
                                <o n="Instance" t="Operand">
                                  <v n="Operand">"TON_0"</v>
                                  <v n="Type">"TON"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">false</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">false</v>
                                  <v n="IsInstance">true</v>
                                  <v n="Id">24L</v>
                                </o>
                                <o n="OutputItems" t="OutputItemList">
                                  <l2 n="OutputItems">
                                    <n />
                                  </l2>
                                </o>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <n n="InputFlags" />
                                <l2 n="InputItems" cet="BoxTreeOperand">
                                  <o>
                                    <o n="Operand" t="Operand">
                                      <v n="Operand">"GVL_VAR.bDoorOpen"</v>
                                      <v n="Type">"BOOL"</v>
                                      <v n="Comment">""</v>
                                      <v n="SymbolComment">""</v>
                                      <v n="Address">""</v>
                                      <o n="Flags" t="Flags">
                                        <v n="Flags">0</v>
                                        <v n="Fixed">false</v>
                                        <v n="Extensible">false</v>
                                      </o>
                                      <v n="LValue">false</v>
                                      <v n="Boolean">true</v>
                                      <v n="IsInstance">false</v>
                                      <v n="Id">28L</v>
                                    </o>
                                    <v n="Id">27L</v>
                                  </o>
                                  <o>
                                    <o n="Operand" t="Operand">
                                      <v n="Operand">"GVL_VAR.tDoorOPenThreshold"</v>
                                      <v n="Type">"TIME"</v>
                                      <v n="Comment">""</v>
                                      <v n="SymbolComment">""</v>
                                      <v n="Address">""</v>
                                      <o n="Flags" t="Flags">
                                        <v n="Flags">0</v>
                                        <v n="Fixed">false</v>
                                        <v n="Extensible">false</v>
                                      </o>
                                      <v n="LValue">false</v>
                                      <v n="Boolean">false</v>
                                      <v n="IsInstance">false</v>
                                      <v n="Id">30L</v>
                                    </o>
                                    <v n="Id">29L</v>
                                  </o>
                                </l2>
                                <o n="InputParam" t="ParamList">
                                  <l2 n="Names" cet="String">
                                    <v>IN</v>
                                    <v>PT</v>
                                  </l2>
                                  <l2 n="Types" cet="String">
                                    <v>BOOL</v>
                                    <v>TIME</v>
                                  </l2>
                                </o>
                                <o n="OutputParam" t="ParamList">
                                  <l2 n="Names" cet="String">
                                    <v>Q</v>
                                  </l2>
                                  <l2 n="Types" cet="String">
                                    <v>BOOL</v>
                                  </l2>
                                </o>
                                <v n="CallType" t="Operator">FunctionBlock</v>
                                <v n="EN">false</v>
                                <v n="ENO">false</v>
                                <n n="STSnippet" />
                                <v n="ContainsExtensibleInputs">false</v>
                                <v n="ProvidesSTSnippet">false</v>
                                <v n="Id">25L</v>
                              </o>
                              <o t="BoxTreeOperand">
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"T#1s"</v>
                                  <v n="Type">"TIME"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">false</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">false</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">35L</v>
                                </o>
                                <v n="Id">34L</v>
                              </o>
                              <o t="BoxTreeOperand">
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"T#1s"</v>
                                  <v n="Type">"TIME"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">false</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">false</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">37L</v>
                                </o>
                                <v n="Id">36L</v>
                              </o>
                            </l2>
                            <o n="InputParam" t="ParamList">
                              <l2 n="Names" cet="String">
                                <v>bStart</v>
                                <v>tSignalTimeOn</v>
                                <v>tSignalTimeOff</v>
                              </l2>
                              <l2 n="Types" cet="String">
                                <v>BOOL</v>
                                <v>TIME</v>
                                <v>TIME</v>
                              </l2>
                            </o>
                            <o n="OutputParam" t="ParamList">
                              <l2 n="Names" cet="String">
                                <v>bOut</v>
                              </l2>
                              <l2 n="Types" cet="String">
                                <v>BOOL</v>
                              </l2>
                            </o>
                            <v n="CallType" t="Operator">Program</v>
                            <v n="EN">false</v>
                            <v n="ENO">false</v>
                            <n n="STSnippet" />
                            <v n="ContainsExtensibleInputs">false</v>
                            <v n="ProvidesSTSnippet">false</v>
                            <v n="Id">33L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"FB_Blinker.fbTimerB.Q"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">true</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">41L</v>
                            </o>
                            <v n="Id">40L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" />
                          <l2 n="Types" />
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" />
                          <l2 n="Types" />
                        </o>
                        <v n="CallType" t="Operator">And</v>
                        <n n="EN" />
                        <n n="ENO" />
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">39L</v>
                      </o>
                      <v n="Id">45L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">23L</v>
                </o>
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">"DoorIsOpen"</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"GVL_VAR.bLamp"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">true</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">49L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeOperand">
                        <o n="Operand" t="Operand">
                          <v n="Operand">"GVL_VAR.bDoorOpen"</v>
                          <v n="Type">"BOOL"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">true</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">true</v>
                          <v n="IsInstance">false</v>
                          <v n="Id">48L</v>
                        </o>
                        <v n="Id">47L</v>
                      </o>
                      <v n="Id">50L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">46L</v>
                </o>
              </l2>
              <v n="BranchCounter">0</v>
              <v n="ValidIds">true</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
            <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
            <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
            <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
            <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
            <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
            <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
            <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
            <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </NWL>
    </Implementation>
  </POU>
</TcPlcObject>